--- a/Main/assets/css/all.css
+++ b/Main/assets/css/all.css
@@ -1,5 +1,3 @@
-#header {
-}
 .links {
   width: 600px;
   display: flex;
@@ -21,5 +19,5 @@
 }
 
 .links a:hover {
-  color: red;
+  color: #ce1b28;
 }
